libs/extractor/src/snapshots/extractor__tests__extract_global_css_with_imports-2.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"test.tsx\",\nr#\"import { globalCss } from \"@devup-ui/core\";\nglobalCss({\n  imports: [\"@devup-ui/core/css/global.css\", \"@devup-ui/core/css/global2.css\"]\n})\n\"#,\nExtractOption\n{\n    package: \"@devup-ui/core\".to_string(), css_dir:\n    \"@devup-ui/core\".to_string(), single_css: true, import_main_css: false,\n    import_aliases: HashMap::new()\n}).unwrap())"
---
ToBTreeSet {
    styles: {
        Import(
            ExtractImport {
                file: "test.tsx",
                order: 1,
                url: "@devup-ui/core/css/global.css",
            },
        ),
        Import(
            ExtractImport {
                file: "test.tsx",
                order: 2,
                url: "@devup-ui/core/css/global2.css",
            },
        ),
    },
    code: "import \"@devup-ui/core/devup-ui.css\";\n;\n",
}
