libs/extractor/src/snapshots/extractor__tests__extract_global_css_with_selector-2.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"test.tsx\",\nr#\"import { globalCss } from \"@devup-ui/core\";\nglobalCss({\n  \"div\": {\n    bg: \"red\",\n    color: \"blue\",\n    _hover: {\n      bg: \"blue\",\n      color: \"red\"\n    }\n  },\n  \"span\": {\n    bg: \"red\",\n    color: \"blue\",\n    _hover: {\n      bg: \"blue\",\n      color: \"red\"\n    }\n  }\n})\n\"#,\nExtractOption\n{ package: \"@devup-ui/core\".to_string(), css_file: None }).unwrap())"
---
ToBTreeSet {
    styles: {
        Static(
            ExtractStaticStyle {
                property: "background",
                value: "blue",
                level: 0,
                selector: Some(
                    Global(
                        "div:hover",
                        "test.tsx",
                    ),
                ),
                style_order: Some(
                    0,
                ),
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "background",
                value: "blue",
                level: 0,
                selector: Some(
                    Global(
                        "span:hover",
                        "test.tsx",
                    ),
                ),
                style_order: Some(
                    0,
                ),
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "background",
                value: "red",
                level: 0,
                selector: Some(
                    Global(
                        "div",
                        "test.tsx",
                    ),
                ),
                style_order: Some(
                    0,
                ),
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "background",
                value: "red",
                level: 0,
                selector: Some(
                    Global(
                        "span",
                        "test.tsx",
                    ),
                ),
                style_order: Some(
                    0,
                ),
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "color",
                value: "blue",
                level: 0,
                selector: Some(
                    Global(
                        "div",
                        "test.tsx",
                    ),
                ),
                style_order: Some(
                    0,
                ),
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "color",
                value: "blue",
                level: 0,
                selector: Some(
                    Global(
                        "span",
                        "test.tsx",
                    ),
                ),
                style_order: Some(
                    0,
                ),
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "color",
                value: "red",
                level: 0,
                selector: Some(
                    Global(
                        "div:hover",
                        "test.tsx",
                    ),
                ),
                style_order: Some(
                    0,
                ),
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "color",
                value: "red",
                level: 0,
                selector: Some(
                    Global(
                        "span:hover",
                        "test.tsx",
                    ),
                ),
                style_order: Some(
                    0,
                ),
            },
        ),
    },
    code: "import \"@devup-ui/core/devup-ui.css\";\n;\n",
}
