libs/extractor/src/snapshots/extractor__tests__extract_global_css_with_template_literal-3.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"test.tsx\",\nr#\"import { globalCss } from \"@devup-ui/core\";\n    globalCss({\n      \"div\": `     `\n    })\n    \"#,\nExtractOption\n{ package: \"@devup-ui/core\".to_string(), css_file: None }).unwrap())"
---
ToBTreeSet {
    styles: {},
    code: ";\n",
}
